--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>React Commerce</title>
         <meta charset="utf-8" />
+        <link rel="shortcut icon" href="favicon.ico" />
+        <meta name="Description" content="Truck Transport is the best Company in the world." />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no"
